# image_comparison_player

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO  imgui.ini
.github/: FUNDING.yml
shaders/: diff_2_images.wgsl  diff_2_images_with_diff.wgsl
src/: app.rs  comparison.rs  image_loader.rs  main.rs  player.rs  shader.wgsl
